--- a/css/services.css
+++ b/css/services.css
@@ -1,6 +1,11 @@
 .services{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    justify-content: space-evenly;
+    justify-items: center;
+    align-content: space-evenly;
+    align-items: center;
+    gap: 40px;
 }
 
 .service {
@@ -8,7 +13,7 @@
     max-width: 300px;
     border-width: 2px;
     border-style: solid;
-    margin: 10px;
+    max-width: 300px;
     border-bottom: 8px solid;
 }
 
